--- a/wiki/PRIDEXMLJAXB.wiki
+++ b/wiki/PRIDEXMLJAXB.wiki
@@ -81,7 +81,7 @@ for(String id : ids) {
   Spectrum spectrum = reader.getSpectrumById(id);
 }
 }}}
-You can access information stored in a `Spectrum` object just like you would access a normal Java object. For instance, you can include the following lines of code to get the meta data associated with SpectrumDesc. 
+You can access information stored in a `Spectrum` object just like you would access a normal Java object. For instance, you can include the following lines of code to get the meta data associated with `SpectrumDesc`. 
 {{{
 // Get spectrum meta data
 SpectrumDesc spectrumDesc = spectrum.getSpectrumDesc();
