--- a/wiki/PRIDEXMLJAXB.wiki
+++ b/wiki/PRIDEXMLJAXB.wiki
@@ -142,13 +142,16 @@ To come in the future.
 [PRIDEXMLJAXB top of page]
 ----
 == FAQs ==
-
+To come in the future.
 [PRIDEXMLJAXB top of page]
 ----
 == Getting Help ==
+If you have questions or need additional help, please contact the PRIDE Helpdesk at the EBI: pride-helpdesk at ebi.ac.uk (replace at with @).
+
+Please send us your feedback, including error reports, improvement suggestions, new feature requests and any other things you might want to suggest to the PRIDE team.
 
 [PRIDEmzGraphBrowser top of page]
 ----
 == Source Code ==
-
+To come in the future
 [PRIDEmzGraphBrowser top of page]
