--- a/wiki/PRIDEUtilities.wiki
+++ b/wiki/PRIDEUtilities.wiki
@@ -1,4 +1,4 @@
-#summary a utility library for computational proteomics.
+#summary a utility library for PRIDE Tool Suite.
 #sidebar TableOfContents
  * [#About_PRIDE_Utilities About PRIDE Utilities]
  * [#Getting_PRIDE_Utilities Getting PRIDE Utilities]
@@ -9,13 +9,13 @@
  * [#Source_Code Source Code]
 
 == About PRIDE Utilities ==
-The primary purpose of PRIDE Utilities library is to provide commonly used classes, which are shared by all the PRIDE Tool Suite. You may also find it useful for your own computational proteomics projects.
+The primary purpose of PRIDE Utilities library is to provide commonly used classes shared by all the PRIDE Tool Suite. You may also find it useful for your own computational proteomics projects.
 
 The library provides four key modules:
  # *mol*: contains classes describing entities at the molecular level, such as: amino acids, neutrual losses, peptides and fragment ions. 
  # *gui*: contains several GUI components, you can use them if you want to replicate some of the features in PRIDE Inspector.
  # *data*: contains classes for data structures missing JDK, such as: Tuple. 
- # *util*: contains a selection of conveninent classes. For examples: formatting protein related informations, checking Internet availability or verfiy email addresses.
+ # *util*: contains a selection of conveninent classes. For examples: for formatting protein related informations, for checking Internet availability or for verfiy email addresses.
 
 Note: the library is still evolving, we are committed to expand this library and add more useful classes. 
 
