Edited wiki page PRIDEUtilities through web user interface.

--- a/wiki/PRIDEUtilities.wiki
+++ b/wiki/PRIDEUtilities.wiki
@@ -65,14 +65,17 @@ For developers, the latest source code is available from our [#Source_Code SVN r
 Here we will show you how to use the PRIDE Utilitites library to calculate m/z delta and calculate theoretical mass of a given peptide. 
 
 ==== Calculate m/z Delta====
-You can find the method for calculating m/z delta from `MoleculeUtilitites` in *mol* package. It requires two input parameters: 'sequence' is the peptide sequence in `String`, `precursorMz` is the precusor m/z in `double`, `precursorCharge` is the precursor charge in double and `ptmMasses` is a list of post translational modifications in `double`. The following lines of code shows you how: 
+You can find the method for calculating m/z delta from `MoleculeUtilitites` in *uk.ac.ebi.pride.mol* package. It requires four input parameters: 'sequence' is the peptide sequence in `String`, `precursorMz` is the precusor m/z in `double`, `precursorCharge` is the precursor charge in double and `ptmMasses` is a list of post translational modifications in `double`. The following lines of code shows you how: 
 {{{
 // Direct call on the method
 Double mzDelta = MolecularUtilitites.calculateDeltaMz(sequence, precursorMz, precursorCharge, ptmMasses);
 }}}
 
 ==== Calculate Theoretical Mass====
+You can also find the method for calculating theoretical mass value from `MoleculeUtilitites`. It needs two input parameters 
 
+*Tip*: Take a close look at other methods within `MoleculeUtilitites`, you might find them useful.
+ 
 [PRIDEUtilities top of page]
 ----
 
