Edited wiki page PRIDEmzGraphBrowser through web user interface.

--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -65,18 +65,24 @@ For developers, the latest source code is available from our [#Source_Code SVN r
 [PRIDEmzGraphBrowser top of page]
 ----
 == API Reference ==
-Will come shortly in the future.
+To come in the future.
+
 [PRIDEmzGraphBrowser top of page]
 ----
 == FAQs ==
- # *
+To come in the future.
+
 [PRIDEmzGraphBrowser top of page]
 ----
 == Getting Help ==
+If you have questions or need additional help, please contact the PRIDE Helpdesk at the EBI: *pride-helpdesk at ebi.ac.uk (replace at with @)*.
+
+Please send us your feedback, including error reports, improvement suggestions, new feature requests and any other things you might want to suggest to the PRIDE team.
 
 [PRIDEmzGraphBrowser top of page]
 ----
 == Source Code ==
+To come in the future.
 
 [PRIDEmzGraphBrowser top of page]
 ----
