--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -64,8 +64,8 @@ For developers, the latest source code is available from our [#Source_Code SVN r
 PRIDE mzGraph Browser library gives you Java Swing based components for visualizing and annotating MS spectra and chromatogram. It is designed to be integrated easily into your project. 
 
 There are two common ways of using this library: 
- # As an independent panel. 
- # As a panel with a build-in tool bar. 
+ * As an independent panel: use this option if you just want to visulize spectrum or chromatogram or you want to program the user interactions yourself. 
+ * As a panel with a build-in tool bar: this option provides the main visualize panel, in addition, you will also get a out-box tool bar which can be customized to include your own actions. 
 
 ====Independent Panel====
 
