Edited wiki page PRIDEmzGraphBrowser through web user interface.

--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -67,7 +67,7 @@ This library is designed to be integrated into your project easily, and there ar
  * *As an independent panel*: use this option if you just want to visulize spectrum or chromatogram or you want to program the user interactions yourself. 
  * *As a panel with a build-in tool bar*: this option provides you with the main visualize panel, in addition, you will also get a out-box tool bar which can be customized to include your own actions. 
 
-====Independent Panel====
+====Spectrum Panel====
 The starting point in using PRIDE mzGraph library to visualize spectrum is to create a `SpectrumPanel`. This panel can be added as a component to Java Swing container, and it is the basis of all user interactions. 
 
 The following code shows you how to create an instance of the `SpectrumPanel` and add it to the Swing component in your project: 
@@ -117,7 +117,7 @@ ions.add(ion1);
 ions.add(ion2);
 spectrum.addFragmentIons(ions);
 }}} 
-====Panel with a Build-in Tool Bar====
+====Spectrum Panel with a Build-in Tool Bar====
  
 [PRIDEmzGraphBrowser top of page]
 ----
