--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -127,8 +127,17 @@ spectrum.addFragmentIons(ions);
 ====Spectrum Panel with a Build-in Tool Bar====
 `SpectrumBrowser` is an extension of `SpectrumPanel`, it uses `SpectrumPanel` to visualize spectrum, it also added a expandible tool bar to perform some common actions. For instance, save/print spectrum as an image, hide the entire peak list and clear all the highlighted mass differences. More importantly, it provides a annotation panel which can filter based on ion series and amino acid annotation series.
 
-You can also add your own component or actions to the build-in tool bar.  
- 
+You can also add your own component or actions to the build-in tool bar. For instance, if you have a general description panel related to a spectrum, and you would like to add it to the tool bar, the code below shows you how:
+{{{
+// Create a new SpectrumBrowser
+SpectrumBrowser browser = new SpectrumBrowser();
+// Set the spectrum peak list
+browser.setPeakList(mzArray, intensityArray);
+// Create a general description panel
+JPanel descPanel = new JPanel();
+// Add the panel to SpectrumBrowser
+browser.add(icon, label, tooltip, actionCommand, descPanel);
+}}} 
 
 [PRIDEmzGraphBrowser top of page]
 ----
